# TCM-Harness

./: .gitignore  AGENTS.md  AGENT_CONSTITUTION.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AUDIT_RESPONSE.md  TCM_HARNESS.md  TEST_REPORT.md
hermes_shanghan/: __init__.py
hermes_shanghan/server/: http_server.py
hermes_tcm/: __init__.py  cli.py  envelope.py  memory.py  platform.py  server.py
hermes_tcm/agents/: __init__.py  orchestrator.py  specialists.py  synthesizer.py  verifier.py
hermes_tcm/claims/: __init__.py  binder.py  compiler.py  counterevidence.py  policy_dsl.py  records.py  verifier.py
hermes_tcm/core/: __init__.py  auth.py  identity.py  policies.py  principals.py  schemas.py
hermes_tcm/corpus/: __init__.py  fingerprint.py  iiif.py  lifecycle.py  normalization.py  preservation.py  registry.py  tei.py
hermes_tcm/domains/: __init__.py  base.py  registry.py  shanghan.py
hermes_tcm/evals/: __init__.py  goldset.py  layers.py  p0_gates.py  seed_goldset.py
hermes_tcm/evidence/: __init__.py  coverage.py  ledger.py  packets.py  provenance.py  records.py
hermes_tcm/harness/: __init__.py  approvals.py  budget.py  checkpoint.py  controller.py  graph.py  otel.py  release.py  replay.py  router.py  run_spec.py  scope.py
hermes_tcm/integrations/: __init__.py  mcp.py  mcp_server.py  sdk.py  specs.py
hermes_tcm/retrieval/: __init__.py  exact.py  fusion.py  graph.py  lexical.py  semantic.py
hermes_tcm/security/: __init__.py  untrusted.py
tests/: test_audit_fixes.py  test_audit_fixes2.py  test_dependency_inversion.py  test_tcm_claims.py  test_tcm_completeness.py  test_tcm_evals.py  test_tcm_evidence.py  test_tcm_fixture.py  test_tcm_hardening.py  test_tcm_harness.py  test_tcm_identity.py  test_tcm_platform.py  test_tcm_security.py  test_tcm_tools.py
(+29 files in other folders)
